# Url-Shortener-RUST

./: Cargo.toml  Dockerfile  run.sh
src/: database.db  main.rs
static/: index.html
