[package]
name = "Url-Shortener-RUST"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls", "sqlite"] }
dotenv = "0.15"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4.22"
env_logger = "0.11.5"